--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					font-size:23px;
 					padding-top:24%;
 					margin-left:50%;
-					color:blue;
+					color:#fff;
 					font-family:bangers;
 				}
 			}
@@ -41,7 +41,7 @@
 					font-size:50px;
 					padding-top:35%;
 					margin-left:60%;
-					color:#1e88e5;
+					color:#fff;
 					font-family:bangers;
 				}
 			}
