--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 					<div class="row">
 						<div class="navbar-header">
 							<a class="navbar-brand" href="index.html">
-								<img class="img-responsive" src="images/varnam.png" alt="logo">
+								<img class="img-responsive" src="images/logo%20.png" alt="logo">
 							</a>
 						</div>
 						<div class="collapse navbar-collapse">
@@ -1328,6 +1328,7 @@
 			<div class="container">
 				<div class="text-center">
 					<p> Connect With Us</p>
+                    <i class="fa fa-facebook" aria-hidden="true"></i>
 
 				</div>
 			</div>
