--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link href="css/main.css" rel="stylesheet">
 		<link href="css/animate.css" rel="stylesheet">
 		<link href="css/responsive.css" rel="stylesheet">
+		<link href="css/font-awesome.min.css" rel="stylesheet">
 		<!--[if lt IE 9]>
 			<script src="js/html5shiv.js"></script>
 			<script src="js/respond.min.js"></script>
@@ -1324,8 +1325,8 @@
 								<div class="item active " style="padding-left:100px;">
 									<ul>
 										<li><h3><b><a href="files/rules.pdf" target="_blank">General Instructions</a></b></h3></li>
-										<li><h3><b><a href="files/file2.pdf" target="_blank">File</a></b></h3></li>
-										<li><h3><b><a href="files/file3.pdf" target="_blank">File</a></b></h3></li>
+										<li><h3><b><a href="files/file2.pdf" target="_blank">Results</a></b></h3></li>
+										<li><h3><b><a href="files/file3.pdf" target="_blank">House Points</a></b></h3></li>
 										<li><h3><b><a href="files/fil4.pdf" target="_blank">File</a></b></h3></li>
 										<li><h3><b><a href="files/file5.pdf" target="_blank">File</a></b></h3></li>
 										<li><h3><b><a href="files/file6.pdf" target="_blank">File</a></b></h3></li>
