--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 					<div class="row">
 						<div class="navbar-header">
 							<a class="navbar-brand" href="index.html">
-								<img class="img-responsive" src="images/varnam.png"   alt="logo">
+								<img class="img-responsive" src="images/varnam.png" width="100" height="100"   alt="logo">
 							</a>
 						</div>
 						<div class="collapse navbar-collapse">
@@ -1327,9 +1327,8 @@
 										<li><h3><b><a href="files/rules.pdf" target="_blank">General Instructions</a></b></h3></li>
 										<li><h3><b><a href="files/file2.pdf" target="_blank">Results</a></b></h3></li>
 										<li><h3><b><a href="files/file3.pdf" target="_blank">House Points</a></b></h3></li>
-										<li><h3><b><a href="files/fil4.pdf" target="_blank">File</a></b></h3></li>
-										<li><h3><b><a href="files/file5.pdf" target="_blank">File</a></b></h3></li>
-										<li><h3><b><a href="files/file6.pdf" target="_blank">File</a></b></h3></li>
+										<li><h3><b><a href="files/fil4.pdf" target="_blank">Event Schedule</a></b></h3></li>
+										
 									</ul>
 								</div>
 							</div>
