--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 					<div class="row">
 						<div class="navbar-header">
 							<a class="navbar-brand" href="index.html">
-								<img class="img-responsive" src="images/varnam.png" width="80" height="100"   alt="logo">
+								<img class="img-responsive" src="images/varnam.png" style="height:100px;margin-top:15%;" alt="logo">
 							</a>
 						</div>
 						<div class="collapse navbar-collapse">
