--- a/index.html
+++ b/index.html
@@ -1329,7 +1329,7 @@
 										<li><h3><b><a href="files/rules.pdf" target="_blank">General Instructions</a></b></h3></li>
 										<li><h3><b><a href="files/file2.pdf" target="_blank">Results</a></b></h3></li>
 										<li><h3><b><a href="files/file3.pdf" target="_blank">House Points</a></b></h3></li>
-										<li><h3><b><a href="files/fil4.pdf" target="_blank">Event Schedule</a></b></h3></li>
+										<li><h3><b><a href="files/Onstage_Event_Schedule_Final.pdf" target="_blank">Event Schedule</a></b></h3></li>
 										
 									</ul>
 								</div>
