--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			}
 
 			.closemodal:hover,
-			.closemodal:focus {
+			.closemoda;:focus {
 				color: #bbb;
 				text-decoration: none;
 				cursor: pointer;
