--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
 			}
 
 			/* The Close Button */
-			.closemodal {
-				position: absolute;
-				top: 15px;
-				right: 35px;
-				color: #f1f1f1;
+				.closemodalg{
+				font-size:150px;
+				margin-left:35px;
+				color: #fff;
+				margin-top:10px;
 				font-size: 40px;
 				font-weight: bold;
 				transition: 0.3s;
 			}
 
-			.closemodal:hover,
-			.closemoda;:focus {
+			.closemodalg:hover,
+			.closemodalg:focus {
 				color: #bbb;
 				text-decoration: none;
 				cursor: pointer;
@@ -1310,7 +1310,7 @@
 				</div>
 			</div>
 			<div id="myModalg" class="modalg">
-				<span class="closemodalg">&times;</span>
+				<span class="closemodalg">X</span>
 				<img class="modal-contentg" id="img01g"/>
 			</div>
 		</section>
